# MSc_Thesis-Code

./: .gitignore  Documentation.md  README.md  pixi.toml
.github/workflows/: docs.yml
ahn_3dbag_cpp/: CMakeLists.txt  README.md  justfile
ahn_3dbag_cpp/src/: classify.h  extension.cpp  extension.h  geometries.h  helper.h  main.cpp  minkowski.cpp  obj.cpp  obj.h
cpp/: CMakeLists.txt  README.md
data/validation/: validation-footprints.parquet  (+1 more)
docs/: zensical.toml
points_to_prints/: .gitignore  Dependencies.md  Documentation.md  README.md  Scripts.md  TODO.md  interesting_buildings.json  justfile  pixi.toml
points_to_prints/cpp/: CMakeLists.txt  Doxyfile  README.md  justfile  pixi.toml
points_to_prints/cpp/src/: cgal.hpp  constants.hpp  distances.cpp  distances.hpp  geometry.hpp  kd_tree.hpp  las.cpp  las.hpp  las_filter.cpp  las_filter.hpp  las_trajectory.cpp  las_trajectory.hpp  local_geometry.hpp  main.cpp  math.cpp  math.hpp  parquet.cpp  parquet.hpp  pbar.hpp  pca.cpp  pca.hpp  points.cpp  points.hpp  ransac.cpp  ransac.hpp  roofprints.cpp  roofprints.hpp  roofprints_new.cpp  roofprints_new.hpp  roofprints_new_new.cpp  roofprints_new_new.hpp
points_to_prints/cpp/src/_old/: _old_footprints.cpp  _old_footprints.hpp  roofprints.cpp  roofprints.hpp  roofprints_new.cpp  roofprints_new.hpp  roofprints_new_new.hpp
points_to_prints/cpp/src/edge_matching/: constants.hpp  criterion.cpp  criterion.hpp  line_mover.cpp  line_mover.hpp  topology.cpp  topology.hpp
points_to_prints/cpp/src/footprints/: criterion.cpp  criterion.hpp  footprints.cpp  footprints.hpp  footprints_new.cpp  points_selection.cpp  points_selection.hpp  roofprints.hpp  simple_scorer.cpp  simple_scorer.hpp
points_to_prints/cpp/src/las/: enums.hpp  reader.cpp  reader.hpp  trajectory.cpp  trajectory.hpp  writer.cpp  writer.hpp
points_to_prints/cpp/src/parquet/: reader.cpp  reader.hpp
points_to_prints/cpp/src/pca/: pca.cpp  pca.hpp
points_to_prints/cpp/src/roofprints/: criterion.cpp  criterion.hpp  roofprints.cpp  transfer_3d.cpp  transfer_3d.hpp
points_to_prints/cpp/src/utils/: cgal.cpp  cgal.hpp  kd_tree.hpp  ogc_simple_features.cpp  strong_types.hpp
python/: README.md  main.py
(+90 files in other folders)
